--- a/demo/style.css
+++ b/demo/style.css
@@ -7,11 +7,11 @@
   background-color: red;
 }
 
-.container.middle .box {
+.container[middle] .box {
   background-color: green;
 }
 
-.container.wide .box {
+.container[wide] .box {
   background-color: blue;
 }
 
@@ -20,10 +20,10 @@
   width: 50%;
 }
 
-.container-perf.middle .box {
+.container-perf[middle] .box {
   background-color: green;
 }
 
-.container-perf.wide .box {
+.container-perf[wide] .box {
   background-color: blue;
 }
