--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,54 +1,6 @@
-// Reset
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol, ul {
-  list-style: none;
-}
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-// Variables
+@import './reset.scss';
 
 $bg-dark: #202020;
-
-// Components
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -68,16 +20,17 @@ h1 {
 h2 {
   font-weight: 700;
   font-size: 36px;
+  line-height: 1.2;
 }
 
 p {
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.4;
 }
 
 code {
   font-family: Inconsolata, monospace;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.3;
 }
 
@@ -99,7 +52,7 @@ code {
 .slide {
   background-color: #FF9500;
   min-height: 100vh;
-  padding: 20px;
+  padding: 15px;
   overflow: hidden;
 
   &-2 {
@@ -124,112 +77,15 @@ code {
   color: yellow;
 }
 
-.example-1 {
-  &__container {
-    background-color: white;
-    padding: 10px;
-    position: relative;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    height: 400px;
-    overflow: hidden;
-  }
-
-  &__logo {
-    width: 30px;
-    height: 30px;
-    background-color: #C1C1C1;
-    margin: 0 auto;
-  }
-
-  &__intro {
-    width: 100%;
-    margin: 10px 10px 0;
-  }
-
-  &__line {
-    background-color: #C1C1C1;
-    height: 6px;
-    & + & {
-      margin-top: 6px;
-    }
-  }
-
-  &__line-1 {
-    width: 70%;
-  }
-
-  &__line-2 {
-    width: 80%;
-  }
-
-  &__line-3 {
-    width: 30%;
-  }
-
-  &__list {
-    margin-top: 10px;
-  }
-
-  &__item {
-    background-color: #C1C1C1;
-    & + & {
-      margin-top: 10px;
-    }
-  }
-
-  &__item-pic {
-    height: 70px;
-    background-color: #FF9500;
-    padding: 8px;
-  }
-
-  &__item-content {
-    height: 70px;
-  }
-
-  &__container[min_with_200] {
-    .example-1 {
-      &__logo {
-        margin: 0;
-      }
-
-      &__intro {
-        margin: 0;
-        padding-left: 60px;
-        position: absolute;
-        right: 10px;
-        top: 10px;
-      }
-
-      &__item-pic {
-        width: 70px;
-        float: left;
-      }
-    }
-  }
-
-  &__container[min_with_300] {
-    .example-1 {
-      &__item {
-        margin-top: 0;
-        margin-bottom: 10px;
-
-        &:nth-child(2n-1) {
-          width: calc(50% - 5px);
-          float: left;
-        }
-
-        &:nth-child(2n) {
-          float: right;
-          width: calc(50% - 5px);
-        }
-      }
-
-      &__item-pic {
-        width: auto;
-        float: none;
-      }
-    }
-  }
+.example {
+  margin-top: 10px;
 }
+
+.example__btn-group {
+
+}
+
+.example__btn {
+}
+
+@import './demo.scss';
