--- a/scss/_demo.scss
+++ b/scss/_demo.scss
@@ -1,103 +1,105 @@
-.demo {
-  &__container {
-    background-color: white;
-    padding: 10px;
-    position: relative;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    height: 400px;
-    overflow: hidden;
+.demo__container {
+  background-color: white;
+  padding: 10px;
+  position: relative;
+  margin-top: 10px;
+  height: 400px;
+  overflow: hidden;
+}
+
+.demo__logo {
+  width: 30px;
+  height: 30px;
+  background-color: #C1C1C1;
+  margin: 0 auto;
+}
+
+.demo__intro {
+  width: 100%;
+  margin: 10px 10px 0;
+}
+
+.demo__line {
+  background-color: #C1C1C1;
+  height: 6px;
+  & + & {
+    margin-top: 6px;
+  }
+}
+
+.demo__line-1 {
+  width: 70%;
+}
+
+.demo__line-2 {
+  width: 80%;
+}
+
+.demo__line-3 {
+  width: 30%;
+}
+
+.demo__list {
+  margin-top: 10px;
+}
+
+.demo__item {
+  background-color: #C1C1C1;
+  margin-bottom: 10px;
+}
+
+.demo__item-pic {
+  height: 100px;
+  background-color: #FF9500;
+  padding: 10px;
+}
+
+.demo__item-content {
+  height: 100px;
+}
+
+.demo__container[middle] {
+  .demo__logo {
+    margin: 0;
   }
 
-  &__logo {
-    width: 30px;
-    height: 30px;
-    background-color: #C1C1C1;
-    margin: 0 auto;
+  .demo__intro {
+    margin: 0;
+    padding-left: 60px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
   }
 
-  &__intro {
-    width: 100%;
-    margin: 10px 10px 0;
+  .demo__item-pic {
+    width: 100px;
+    float: left;
+  }
+}
+
+.demo__container[wide] {
+  .demo__list {
+    margin-right: -30px;
   }
 
-  &__line {
-    background-color: #C1C1C1;
-    height: 6px;
-    & + & {
-      margin-top: 6px;
-    }
+  .demo__item {
+    float: left;
+    margin-right: 10px;
   }
 
-  &__line-1 {
-    width: 70%;
+  .demo__item-pic {
+    width: 140px;
+    float: none;
   }
 
-  &__line-2 {
-    width: 80%;
-  }
+  .demo__item--feature {
+    width: auto;
+    float: none;
+    margin-right: 30px;
 
-  &__line-3 {
-    width: 30%;
-  }
-
-  &__list {
-    margin-top: 10px;
-  }
-
-  &__item {
-    background-color: #C1C1C1;
-    margin-bottom: 10px;
-  }
-
-  &__item-pic {
-    height: 100px;
-    background-color: #FF9500;
-    padding: 10px;
-  }
-
-  &__item-content {
-    height: 100px;
-  }
-
-  &__container[middle] & {
-    &__logo {
-      margin: 0;
-    }
-
-    &__intro {
-      margin: 0;
-      padding-left: 60px;
-      position: absolute;
-      right: 10px;
-      top: 10px;
-    }
-
-    &__item-pic {
+    .demo__item-pic {
+      float: left;
       width: 100px;
-      float: left;
-    }
-  }
-
-  &__container[wide] & {
-    &__item {
-      float: left;
-      margin-right: 10px;
-    }
-
-    &__item-pic {
-      width: 140px;
-      float: none;
-    }
-
-    &__item--feature {
-      width: auto;
-      float: none;
-
-      .demo__item-pic {
-        float: left;
-        width: 100px;
-      }
     }
   }
 }
