--- a/scss/_example.scss
+++ b/scss/_example.scss
@@ -27,6 +27,16 @@
   .example__btn {
     display: block;
     margin-bottom: 10px;
+
+    @include minWith600px {
+      display: inline-block;
+      margin-right: 20px;
+      font-size: 20px;
+    }
+
+    @include minWith900px {
+      font-size: 24px;
+    }
   }
 }
 
