Add button 3d style

--- a/scss/_example.scss
+++ b/scss/_example.scss
@@ -16,6 +16,7 @@
   background-image: none;
   border: 1px solid rgba(0, 0, 0, 0);
   border-radius: 4px;
+  outline: none;
 }
 
 .example {
@@ -27,12 +28,6 @@
   .example__btn {
     display: block;
     margin-bottom: 10px;
-    transition: background-color 200ms, color 200ms;
-
-    &.example__btn--active {
-      background-color: #1D62F0;
-      color: white;
-    }
 
     @include minWith600px {
       display: inline-block;
@@ -48,4 +43,15 @@
 
 .example__btn {
   @include base-btn;
+  transition: all 200ms;
+  box-shadow: 0 4px 0 darken(#FFF, 20%), 0 5px 5px 1px rgba(0, 0, 0, 0.4);
+  position: relative;
+  top: -4px;
+
+  &.example__btn--active {
+    background-color: #1D62F0;
+    color: white;
+    top: 1px;
+    box-shadow: 0 1px 0 darken(#1D62F0, 20%), 0 1px 1px 1px rgba(0, 0, 0, 0.4);
+  }
 }
